--- a/BibliotecaConsole/BibliotecaConsole.csproj
+++ b/BibliotecaConsole/BibliotecaConsole.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConexaoDB.cs" />
+    <Compile Include="Emprestimo.cs" />
+    <Compile Include="Livro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
