--- a/BibliotecaConsole/BibliotecaConsole.csproj
+++ b/BibliotecaConsole/BibliotecaConsole.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ConexaoDB.cs" />
     <Compile Include="Emprestimo.cs" />
     <Compile Include="Livro.cs" />
+    <Compile Include="Pessoa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
