--- a/Biblioteca/Biblioteca.csproj
+++ b/Biblioteca/Biblioteca.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72D986C8-5BDD-4B80-B1C7-18540944668A}</ProjectGuid>
+    <ProjectGuid>{F90E43EA-49F7-4FC7-AF13-48AF9EEFB8E6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BibliotecaConsole</RootNamespace>
-    <AssemblyName>BibliotecaConsole</AssemblyName>
+    <RootNamespace>Biblioteca</RootNamespace>
+    <AssemblyName>Biblioteca</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,13 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConexaoDB.cs" />
-    <Compile Include="Emprestimo.cs" />
-    <Compile Include="Livro.cs" />
-    <Compile Include="Pessoa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
